<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/learn/android-developer/</string>
    <string name="support_mail">beduir@hidden.com</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_input_hint">Поиск</string>
    <string name="finish">Выход</string>
    <string name="clear_search_text">Очистить поисковый запрос</string>
    <string name="cover">Обложка</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="network_issues">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="cover_image">Изображение обложки</string>
    <string name="track_country">Страна</string>
    <string name="track_genre">Жанр</string>
    <string name="track_year">Год</string>
    <string name="track_album">Альбом</string>
    <string name="track_duration">Длительность</string>
    <string name="play_button">Воспроизвести</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
</resources>