<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/plm_blue"
    android:paddingHorizontal="16dp"
    android:paddingVertical="14dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/main_app_color"
        android:textSize="@dimen/title"
        android:fontFamily="@font/ys_display_medium" />

    <Button
        android:id="@+id/search_button"
        android:text="@string/search"
        app:icon="@drawable/search"
        style="@style/MainButtonStyle"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/media_button"
        android:text="@string/media"
        app:icon="@drawable/mediateka"
        style="@style/MainButtonStyle" />

    <Button
        android:id="@+id/settings_button"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        style="@style/MainButtonStyle" />

</LinearLayout>