<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/settings_button_horizontal_padding"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/left_arrow"
            app:iconTint="@color/plm_black"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="28dp"
            android:text="@string/settings"
            android:textColor="@color/plm_black"
            android:textSize="@dimen/title"
            android:fontFamily="@font/ys_display_medium" />
    </LinearLayout>

    <Switch
        android:text="@string/black_theme"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        style="@style/SettingsMenuItemStyle" />

    <TextView
        app:drawableEndCompat="@drawable/share"
        android:text="@string/share_app"
        style="@style/SettingsMenuItemStyle" />

    <TextView
        app:drawableEndCompat="@drawable/support"
        android:text="@string/write_to_support"
        style="@style/SettingsMenuItemStyle" />

    <TextView
        app:drawableEndCompat="@drawable/forward_arrow"
        android:text="@string/user_agreement"
        style="@style/SettingsMenuItemStyle" />

</LinearLayout>