<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/search_background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_mainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_mainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_descriptionGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_descriptionGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/back_button"
        style="@style/ActivityBackButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/left_mainGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/cover_image"
        android:scaleType="fitCenter"
        app:cornerRadius="@dimen/player_cover_conver_radius"
        app:layout_constraintBottom_toTopOf="@id/half_screen"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_mainGuideline"
        app:layout_constraintStart_toStartOf="@+id/left_mainGuideline"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:srcCompat="@drawable/cover" />

    <TextView
        android:id="@+id/track_name"
        style="@style/PlayerTrackBaseInfo"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/right_mainGuideline"
        app:layout_constraintStart_toStartOf="@+id/left_mainGuideline"
        app:layout_constraintTop_toBottomOf="@id/half_screen"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/track_artist"
        style="@style/PlayerTrackBaseInfo"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/right_mainGuideline"
        app:layout_constraintStart_toStartOf="@+id/left_mainGuideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="The Beatles" />

    <TextView
        android:id="@+id/country"
        style="@style/PlayerDescriptionItem"
        android:layout_marginBottom="20dp"
        android:text="@string/track_country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_descriptionGuideline"
        app:layout_constraintTag="country" />

    <TextView
        android:id="@+id/genre"
        style="@style/PlayerDescriptionItem"
        android:text="@string/track_genre"
        app:layout_constraintBottom_toTopOf="@+id/country"
        app:layout_constraintStart_toStartOf="@+id/left_descriptionGuideline"
        app:layout_constraintTag="genre" />

    <TextView
        android:id="@+id/year"
        style="@style/PlayerDescriptionItem"
        android:text="@string/track_year"
        app:layout_constraintBottom_toTopOf="@+id/genre"
        app:layout_constraintStart_toStartOf="@+id/left_descriptionGuideline"
        app:layout_constraintTag="year" />

    <TextView
        android:id="@+id/album"
        style="@style/PlayerDescriptionItem"
        android:text="@string/track_album"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/left_descriptionGuideline"
        app:layout_constraintTag="album" />

    <TextView
        android:id="@+id/duration"
        style="@style/PlayerDescriptionItem"
        android:text="@string/track_duration"
        app:layout_constraintBottom_toTopOf="@+id/album"
        app:layout_constraintStart_toStartOf="@+id/left_descriptionGuideline"
        app:layout_constraintTag="duration" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/descriptionBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="country, genre, year, album, duration" />

    <TextView
        android:id="@+id/country_value"
        style="@style/PlayerDescriptionValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/right_descriptionGuideline"
        app:layout_constraintStart_toEndOf="@+id/descriptionBarrier"
        tools:text="Великобритания" />

    <TextView
        android:id="@+id/genre_value"
        style="@style/PlayerDescriptionValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/genre"
        app:layout_constraintEnd_toStartOf="@+id/right_descriptionGuideline"
        app:layout_constraintStart_toEndOf="@+id/descriptionBarrier"
        tools:text="Rock" />

    <TextView
        android:id="@+id/year_value"
        style="@style/PlayerDescriptionValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintEnd_toStartOf="@+id/right_descriptionGuideline"
        app:layout_constraintStart_toEndOf="@+id/descriptionBarrier"
        tools:text="1965" />

    <TextView
        android:id="@+id/album_value"
        style="@style/PlayerDescriptionValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/album"
        app:layout_constraintEnd_toStartOf="@+id/right_descriptionGuideline"
        app:layout_constraintStart_toEndOf="@+id/descriptionBarrier"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/duration_value"
        style="@style/PlayerDescriptionValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/right_descriptionGuideline"
        app:layout_constraintStart_toEndOf="@+id/descriptionBarrier"
        tools:text="5:35" />

    <ImageView
        android:id="@+id/add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_playlist"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/left_mainGuideline"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        app:srcCompat="@drawable/add_to_playlist" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play_button"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/add_to_favorites"
        app:layout_constraintStart_toEndOf="@+id/add_to_playlist"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        app:srcCompat="@drawable/play_button" />

    <ImageView
        android:id="@+id/add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_favorites"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/right_mainGuideline"
        app:layout_constraintStart_toEndOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        app:srcCompat="@drawable/add_to_favorites" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/time"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:textColor="?attr/track_list_title"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/play"
        app:layout_constraintStart_toEndOf="@+id/left_mainGuideline"
        app:layout_constraintEnd_toStartOf="@+id/right_mainGuideline"
        tools:text="0:30" />

</androidx.constraintlayout.widget.ConstraintLayout>